# mogmod-backend

./: .env_template  Cargo.toml  readme.md
src/: main.rs  persistence.rs  transformer.rs  web.rs
