[package]
name = "mogmod-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version ="0.7.7", features = ["macros"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["array-impls"] }
tokio-stream = "0.1.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
